--- a/package.json
+++ b/package.json
@@ -20,71 +20,73 @@
   },
   "dependencies": {
     "@agm/core": "^1.0.0-beta.0",
-    "@angular/common": "4.1.2",
-    "@angular/compiler": "4.1.2",
-    "@angular/compiler-cli": "4.1.2",
-    "@angular/core": "4.1.2",
-    "@angular/forms": "4.1.2",
-    "@angular/http": "4.1.2",
-    "@angular/platform-browser": "4.1.2",
-    "@angular/platform-browser-dynamic": "4.1.2",
-    "@ionic-native/camera": "^3.12.1",
-    "@ionic-native/contacts": "^3.12.1",
-    "@ionic-native/core": "3.10.2",
-    "@ionic-native/crop": "^3.12.1",
-    "@ionic-native/fcm": "^3.12.1",
-    "@ionic-native/geolocation": "^3.10.3",
-    "@ionic-native/image-picker": "^3.11.0",
-    "@ionic-native/sim": "^3.11.0",
-    "@ionic-native/splash-screen": "3.10.2",
-    "@ionic-native/status-bar": "3.10.2",
-    "@ionic/storage": "2.0.1",
-    "angular2-moment": "^1.3.3",
-    "babel-runtime": "^6.23.0",
-    "bluebird": "^3.5.0",
+    "@angular/common": "8.2.1",
+    "@angular/compiler": "8.2.1",
+    "@angular/compiler-cli": "8.2.1",
+    "@angular/core": "8.2.1",
+    "@angular/forms": "8.2.1",
+    "@angular/http": "7.2.15",
+    "@angular/platform-browser": "8.2.1",
+    "@angular/platform-browser-dynamic": "8.2.1",
+    "@ionic-native/camera": "^5.12.0",
+    "@ionic-native/contacts": "^5.12.0",
+    "@ionic-native/core": "5.12.0",
+    "@ionic-native/crop": "^5.12.0",
+    "@ionic-native/fcm": "^5.12.0",
+    "@ionic-native/geolocation": "^5.12.0",
+    "@ionic-native/image-picker": "^5.12.0",
+    "@ionic-native/sim": "^5.12.0",
+    "@ionic-native/splash-screen": "5.12.0",
+    "@ionic-native/status-bar": "5.12.0",
+    "@ionic/storage": "2.2.0",
+    "angular2-moment": "^1.9.0",
+    "babel-runtime": "^6.26.0",
+    "bluebird": "^3.5.5",
     "com.synconset.imagepicker": "git+https://github.com/darkbasic/ImagePicker.git",
-    "cordova-android": "^6.2.3",
-    "cordova-plugin-camera": "^2.4.1",
-    "cordova-plugin-compat": "^1.1.0",
-    "cordova-plugin-console": "^1.0.5",
-    "cordova-plugin-contacts": "^2.3.1",
+    "cordova-android": "^8.0.0",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-crop": "^0.4.0",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-facebook4": "git+https://github.com/darkbasic/cordova-plugin-facebook4.git",
     "cordova-plugin-fcm": "git+https://github.com/darkbasic/cordova-plugin-fcm.git",
-    "cordova-plugin-geolocation": "^2.4.3",
+    "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-sim": "^1.3.3",
     "cordova-plugin-sms-receiver": "^0.1.6",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.2",
-    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
     "fb": "^2.0.0",
-    "ionic-angular": "3.3.0",
+    "ionic-angular": "3.9.8",
     "ionic-plugin-keyboard": "^2.2.1",
-    "ionicons": "3.0.0",
-    "meteor-node-stubs": "^0.2.6",
-    "meteor-rxjs": "^0.4.7",
-    "moment": "^2.18.1",
-    "node-fetch": "^1.7.1",
-    "rxjs": "5.1.1",
-    "sharp": "^0.18.1",
+    "ionicons": "4.6.2",
+    "lodash": "^4.17.15",
+    "meteor-node-stubs": "^0.4.1",
+    "meteor-rxjs": "^0.4.14",
+    "moment": "^2.24.0",
+    "node-fetch": "^2.6.0",
+    "rxjs": "6.5.2",
+    "sharp": "^0.23.0",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.11"
+    "zone.js": "0.10.1"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.3.7",
-    "@ionic/cli-plugin-cordova": "1.4.0",
-    "@ionic/cli-plugin-ionic-angular": "1.3.1",
-    "@types/bluebird": "^3.5.5",
-    "@types/meteor": "^1.3.31",
+    "@ionic/app-scripts": "3.2.4",
+    "@ionic/cli-plugin-cordova": "1.6.2",
+    "@ionic/cli-plugin-ionic-angular": "1.4.1",
+    "@types/bluebird": "^3.5.27",
+    "@types/lodash": "^4.14.136",
+    "@types/meteor": "^1.4.29",
     "@types/meteor-accounts-phone": "0.0.5",
-    "@types/meteor-collection-hooks": "^0.8.1",
-    "@types/meteor-publish-composite": "0.0.32",
-    "@types/node-fetch": "^1.6.7",
-    "@types/underscore": "^1.8.0",
-    "meteor-typings": "^1.3.1",
-    "tmp": "0.0.31",
-    "typescript": "2.3.3",
+    "@types/meteor-collection-hooks": "^0.8.5",
+    "@types/meteor-publish-composite": "0.0.35",
+    "@types/node-fetch": "^2.5.0",
+    "@types/underscore": "^1.9.2",
+    "meteor-typings": "^1.4.1",
+    "tmp": "^0.1.0",
+    "typescript": "^2.4.2",
     "typescript-extends": "^1.0.1"
   },
   "description": "whatsapp: An Ionic project",
